--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>vite test</title>
-
-    <script type="module" src="/web/pages/index/index.tsx"></script>
-  </head>
-
-  <body>
-    <div class="main"></div>
-  </body>
-</html>
+empty
